traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:12: error: value update is not a member of Int
  if(getX() = large && getY() = hauteur){
     ^TraversalByColumn:12: error: value && is not a member of Int
  if(getX() = large && getY() = hauteur){
                    ^